# core

./: .gitignore  .travis.yml  CMakeLists.txt  readme.md  the_farmer.drawio
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
src/components/: Bacteria.cpp  CMakeLists.txt  Crop.cpp  Field.cpp  Inffectable.cpp  Tile.cpp
src/include/: Agent.hpp  Bacteria.hpp  Crop.hpp  Field.hpp  Inffectable.hpp  Organism.hpp  Substract.hpp  tile.hpp
test/: Bacteria_t.cpp  CMakeLists.txt  Crop_t.cpp  Field_t.cpp  Organism_t.cpp  Substract_t.cpp
